<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@drawable/name"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:hint="@string/hintName"
        android:inputType="text"
        />

</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/name"
            />

            <EditText
                android:id="@+id/surname"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/hintSurname"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/web"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/web"
                />

            <EditText
                android:id="@+id/web"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/hintWeb"
                android:inputType="textUri"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/phone"
                />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/hintPhone"
                android:inputType="phone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/btnShow"
                android:onClick="showButtonPressed"
                />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/btnDelete"
                android:background="@color/red"
                />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>